# template_sia

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  _combined_manuscript.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  manuscript__01_introduction.html  manuscript__03_results.html  manuscript__04_conclusion.html  pyproject.toml
.agents/: AGENTS.md
.agents/skills/: AGENTS.md
data/: AGENTS.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  forking_guide.md  output_conventions.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  04_conclusion.md  99_references.md  AGENTS.md  README.md  config.yaml  config.yaml.example  references.bib
scripts/: AGENTS.md  README.md  run_sia_loop.py  sia_loop_impl.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  artifact_manifest.py  generation_records.py  loop.py  loop_config.py  manuscript_tokens_core.py  manuscript_tokens_metrics.py  manuscript_variables.py  reference_agent.py  reports.py
tasks/: AGENTS.md  README.md
tests/: AGENTS.md  README.md  conftest.py  test_artifact_manifest.py  test_figures.py  test_fixture_live_separation.py  test_gate_negative_controls.py  test_generation_records.py  test_loop.py  test_loop_live.py  test_manuscript_variables.py  test_reference_agent.py  test_reports.py  test_scripts.py  test_src_reference_agent.py
(+93 files in other folders)
